[build-system]
requires = ["setuptools>=75.6.0", "wheel", "setuptools_scm[toml]>=5.0"]

[project.urls]
Repository = "https://github.com/ApeWorX/sphinx-ape"
Issues = "https://github.com/ApeWorX/sphinx-ape/issues"
Documentation = "https://docs.apeworx.io/sphinx-ape"

[project]
name = "sphinx-ape"
dynamic = ["version"]
license = "Apache-2.0"
description = "sphinx-ape: Build Sphinx Documentation for ApeWorX plugins"
keywords = ["etheruem", "ape", "sphinx"]
readme = "README.md"
authors = [
    { name = "ApeWorX Ltd.", email="admin@apeworx.io"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<4"
dependencies = [
    "click>=8.1.7,<9",  # Script controller framework
    "tomli>=1.2.3,<3",  # For parsing pyproject.toml file
    "shibuya",  # Sphinx theme
    "pygments>=2.17.0,<3",  # Needed for the Vyper lexer
    "myst-parser>=4.0.0,<5",  # Parse markdown docs
    "sphinx-click>=6.0.0,<7",  # For documenting CLI
    "Sphinx>=8.1.3,<9",  # Documentation generator
    "sphinx_rtd_theme>=3.0.1,<4",  # Readthedocs.org theme
    "sphinxcontrib-napoleon>=0.7,<0.8",  # Allow Google-style documentation
    "sphinx-plausible>=0.1.2,<0.2",  # For analytics
]

[project.scripts]
sphinx-ape = "sphinx_ape._cli:cli"

[dependency-groups]
test = [
    "pytest>=8.3.2,<9",
    "pytest-mock>=3.14.0,<4",
]
lint = [
    "black>=24.10.0,<25",  # Auto-formatter and linter
    "mypy>=1.13.0,<2",  # Static type analyzer
    "types-setuptools",  # Needed for mypy type shed
    "docutils-stubs",  # Needed for mypy type shed
    "flake8>=7.1.1,<8",  # Style linter
    "flake8-breakpoint>=1.1.0,<2",  # Detect breakpoints left in code
    "flake8-print>=5.0.0,<6",  # Detect print statements left in code
    "flake8-pydantic",  # For detecting issues with Pydantic models
    "flake8-type-checking",  # Detect imports to move in/out of type-checking blocks
    "isort>=5.13.2,<6",  # Import sorting linter
    "mdformat>=0.7.19",  # Auto-formatter for markdown
    "mdformat-gfm>=0.3.5",  # Needed for formatting GitHub-flavored markdown
    "mdformat-frontmatter>=0.4.1",  # Needed for frontmatters-style headers in issue templates
    "mdformat-pyproject>=0.0.2",  # Allows configuring in pyproject.toml
]
release = [  # `release` GitHub Action job uses this
    "setuptools",  # Installation tool
    "wheel",  # Packaging tool
    "twine",  # Package upload tool
]
dev = [
    "commitizen",  # Manage commits and publishing releases
    "pre-commit",  # Ensure that linters are run prior to committing
    "pytest-watch",  # `ptw` test watcher/runner
    "IPython",  # Console for interacting
    "ipdb",  # Debugger (Must use `export PYTHONBREAKPOINT=ipdb.set_trace`)
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.setuptools]
packages = ["sphinx_ape"]
[tool.setuptools.package-data]
sphinx_ape = ["py.typed", "_static/*"]

[tool.setuptools_scm]
write_to = "sphinx_ape/version.py"

[tool.mypy]
exclude = "build/"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
extend_skip = ["version.py"]

[tool.mdformat]
number = true
